# src/controllers/email-controller.js
@@ -2,6 +2,7 @@
 import dotenv from 'dotenv';
 import sendEmail from '../../services/email/email-controller';
 import getTemplateInvite from '../../services/email/templates/invite';
+import getTemplateInviteReitor from '../../services/email/templates/inviteReitor';
 import getTemplateReminderUser from '../../services/email/templates/reminderDay';
 import getTemplateSponsorsInvite from '../../services/email/templates/sponsorsInvite';
 
@@ -101,8 +102,41 @@ export const postSponsorsInvite = async (req, res) => {
   res.json({ message: 'ok' });
 };
 
+export const postInviteReitor = async (req, res) => {
+  /* #swagger.description = "Rota responsável por enviar e-mail de convite ao Reitor" */
+  /* #swagger.tags = ["Envio de e-mail"] */
+  /* #swagger.requestBody = { 
+    required: true, 
+    content: { 
+      "application/json": { 
+        schema: { $ref: "#/components/schemas/SendEmailDefault" }, 
+      } 
+    } 
+    } 
+  */
+
+  const {
+    body: { email, name },
+  } = req;
+
+  const templateEmail = getTemplateInviteReitor({
+    username: name,
+  });
+
+  sendEmail({
+    text: 'Convite Especial ao 4º WTMI - Evento de Educação e Tecnologia de Morrinhos! 🚀',
+    subject:
+      'Convite Especial ao 4º WTMI - Evento de Educação e Tecnologia de Morrinhos! 🚀',
+    to: [email],
+    html: templateEmail,
+  });
+
+  res.json({ message: 'ok' });
+};
+
 export default {
   postInvite,
   postReminderDay,
   postSponsorsInvite,
+  postInviteReitor,
 };
